--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,181 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.example.wilop.topmovies.MainActivity">
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView00"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="0"
-            android:layout_row="0"
-            android:layout_column="0"
-            app:srcCompat="@mipmap/ic_launcher" />
+    <RelativeLayout
+        android:layout_width="368dp"
+        android:layout_height="493dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="10dp">
 
-        <ImageView
-            android:id="@+id/imageView01"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="1"
-            android:layout_row="0"
-            android:layout_column="1"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView02"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="2"
-            android:layout_row="0"
-            android:layout_column="2"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView03"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="3"
-            android:layout_row="1"
-            android:layout_column="0"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView04"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="4"
-            android:layout_row="1"
-            android:layout_column="1"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView05"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="5"
-            android:layout_row="1"
-            android:layout_column="2"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView06"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="6"
-            android:layout_row="2"
-            android:layout_column="0"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView07"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="7"
-            android:layout_row="2"
-            android:layout_column="1"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView08"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="8"
-            android:layout_row="2"
-            android:layout_column="2"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView09"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="9"
-            android:layout_row="3"
-            android:layout_column="0"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="10"
-            android:layout_row="3"
-            android:layout_column="1"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="11"
-            android:layout_row="3"
-            android:layout_column="2"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="12"
-            android:layout_row="4"
-            android:layout_column="0"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="13"
-            android:layout_row="4"
-            android:layout_column="1"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="14"
-            android:layout_row="4"
-            android:layout_column="2"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="15"
-            android:layout_row="5"
-            android:layout_column="0"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="16"
-            android:layout_row="5"
-            android:layout_column="1"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView17"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="17"
-            android:layout_row="5"
-            android:layout_column="2"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView18"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="18"
-            android:layout_row="6"
-            android:layout_column="0"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView19"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="19"
-            android:layout_row="6"
-            android:layout_column="1"
-            app:srcCompat="@mipmap/ic_launcher" />
-        <ImageView
-            android:id="@+id/imageView20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:tag="20"
-            android:layout_row="6"
-            android:layout_column="2"
-            app:srcCompat="@mipmap/ic_launcher" />
-
-
-
-    </GridLayout>
+        <TextView
+            android:id="@+id/txt"
+            android:layout_width="500dp"
+            android:layout_height="500dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
