--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,149 @@
     tools:context="com.example.wilop.topmovies.MainActivity">
 
 
-    <RelativeLayout
-        android:layout_width="368dp"
-        android:layout_height="493dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="10dp">
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/txt"
-            android:layout_width="500dp"
-            android:layout_height="500dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
-    </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/Layout00"
+            android:layout_width="93dp"
+            android:layout_height="150dp"
+            android:layout_column="0"
+            android:layout_row="0">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:tag="0"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView0"
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    app:srcCompat="@drawable/preview" />
+
+                <TextView
+                    android:id="@+id/textView0a"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/textView2"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/textView0b"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:textAlignment="center" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/Layout01"
+            android:layout_width="93dp"
+            android:layout_height="150dp"
+            android:layout_column="1"
+            android:layout_row="0">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:tag="0"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    app:srcCompat="@drawable/preview" />
+
+                <TextView
+                    android:id="@+id/textView1a"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/textView2"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/textView1b"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:textAlignment="center" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/Layout02"
+            android:layout_width="93dp"
+            android:layout_height="150dp"
+            android:layout_column="2"
+            android:layout_row="0"
+            android:tag="2">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:tag="0"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    app:srcCompat="@drawable/preview" />
+
+                <TextView
+                    android:id="@+id/textView2a"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/textView2"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/textView2b"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:textAlignment="center" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/Layout03"
+            android:layout_width="93dp"
+            android:layout_height="150dp"
+            android:layout_column="3"
+            android:layout_row="0">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:tag="0"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    app:srcCompat="@drawable/preview" />
+
+                <TextView
+                    android:id="@+id/textView3a"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/textView2"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/textView3b"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:textAlignment="center" />
+            </LinearLayout>
+        </RelativeLayout>
+    </GridLayout>
 </android.support.constraint.ConstraintLayout>
